Front-end casi completo
Falta:
- Cargar el historial de compra
- Generar los datos al realizar la compra
- Estadisticas
- Resumen de compra

Bugs:
- Problema al intentar acceder por primera vez a la app
- Problema para datos de un usuario

--- a/Practica6/Visual/pasadas.html
+++ b/Practica6/Visual/pasadas.html
@@ -31,7 +31,7 @@
           <script>
               const http = new XMLHttpRequest()
               const url = 'https://gh1rhthe41.execute-api.us-east-1.amazonaws.com/default/Reservas'
-              http.open("POST",url)
+              http.open("OPTIONS",url)
               http.send()
 
               http.onreadystatechange=(e)=>{
