--- a/Proyecto-Final/mail-microservice/src/main/resources/static/confirmacionRegistro.html
+++ b/Proyecto-Final/mail-microservice/src/main/resources/static/confirmacionRegistro.html
@@ -1,39 +1,34 @@
 <!doctype html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
 
-    <!-- Bootstrap CSS -->
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" rel="stylesheet">
-
-    <title>PUCCM Eventos</title>
 </head>
 <body>
 <!--NavBar-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-2">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">PUCMM Eventos</a>
+        <h4 class="navbar-brand" href="#">PUCMM Eventos - Notificacion de Registro</h4>
         <button aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
                 data-bs-target="#navbarScroll" data-bs-toggle="collapse" type="button">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarScroll">
-            <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-                <li class="nav-item">
-                    <a aria-current="page" class="nav-link active" href="#">Servicios</a>
-                </li>
-
-            </ul>
-            <div class="d-flex">
-                <a aria-current="page" class="btn btn-outline-secondary m-3" href="#">Log-In</a>
-                <a aria-current="page" class="btn btn-primary m-3" href="#">Registrarse</a>
-            </div>
-        </div>
     </div>
 </nav>
+<div class="card m-5">
+    <div class="card-body">
+        <h4>Bienvenido a la familia de PUCMM-Eventos!!</h4>
+        <h5>partir de ahora puedes adquirir nuestros servicios a traves de nuestra plataforma utilizando los siguientes datos:</h5>
+        <h5 th:text="'Usuario:' + ${usuario}"></h5>
+        <h5 th:text="'Contraseña:' + ${password}"></h5>
+      
+</div>
+</div>
+<p class="card-subtitle mb-2 text-muted" style="margin-left: 2rem;"> Si no has realizado ningun registro por favor contactarnos a traves de info@fguzman.codes</p>
+
 <!-- Option 1: Bootstrap Bundle with Popper -->
 <script crossorigin="anonymous"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
